# classes

HCM/: assign01.docx  interaction.docx  persona and criteria.docx  project 1.docx  project 2.docx  project 3 slide.docx  project 3. .docx  project12.docx  projet 11.docx  rochak plan and test.docx  samual usability test.docx  teach 4.docx  tech interaction 02.docx  ~$oject 3 slide.docx  ~$oject 3. .docx  ~WRL0068.tmp
OS/: Analogy week02.docx  Analogy03.docx  Analogyweek05.docx  kunwar02.docx  lab05.cpp  new-file.xlsx  week08.docx
Open_MP/: CMakeLists.txt  CountTheTriples.cpp  CountTheTriplesEfficient.cpp  KadaneProblem.cpp  KadaneProblem2.cpp  MergeTwoSortedArrayInOneArray.cpp  MergeTwoSortedArrayInTwoArray.cpp  MissingNoArray.cpp  MissingNoInArray2.cpp  RearrangeArrayAlternatively.cpp  SubArrayWithGivenSum.cpp  SubArrayWithGivenSum2.cpp  lab01.c  lab02.c  main.cpp  perm.cpp  practice.cpp  practice_CA.c
Python/: 000Practice.py  BSF_DSF.py  BST.py  BinarySearch.py  Deepracer.py  DeleteAdjacent.py  Dictonary.py  Fibo.py  FindingMiddleElement LinkList.py  Graph.py  HashTable.py  Linked List.py  LongestPalindrome.py  LongestPalindrome2.py  Permutation.py  Quick.py  ReverseLinkList.py  Stack.py  Tree.py  reverseString.py
Religion/: Ded 4 Rochak Kunwar.docx  ELE.docx  FDREL200_CaseStudyReportTemplate.docx  Kunwar02case.docx  PLP Template    2.docx  PLP Template.docx  Rochak Case-study 1.docx  Share week 06.docx  casestudy12.docx  fiddlerinroof.docx  kunwar02_share.docx  kunwar04share with other.docx  kunwar07casestudy.docx  kunwar10 CaseStudyReportTemplate.docx  (+5 more)
(+271 files in other folders)
