cmake_minimum_required(VERSION 3.14)
project(Open_MP)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")

add_executable(Open_MP main.cpp)
add_executable(perm perm.cpp)
add_executable(main main.cpp)
add_executable(SubArrayWithGivenSum SubArrayWithGivenSum.cpp)
add_executable(SubArrayWithGivenSum2 SubArrayWithGivenSum2.cpp)
add_executable(CountTheTriples CountTheTriples.cpp)
add_executable(CountTheTriplesEfficient CountTheTriplesEfficient.cpp)
add_executable(KadaneProblem KadaneProblem.cpp)
add_executable(KadaneProblem2 KadaneProblem2.cpp)
add_executable(MissingNoInArray MissingNoArray.cpp)
add_executable(MissingNoInArray2 MissingNoInArray2.cpp)
add_executable(MergeTwoSortedArray MergeTwoSortedArrayInTwoArray.cpp)
add_executable(MergeTwoSortedArrayInOneArray MergeTwoSortedArrayInOneArray.cpp)
add_executable(RearrangeArrayAlternatively RearrangeArrayAlternatively.cpp)
add_executable(MergeTwoSortedArrayInTwoArray MergeTwoSortedArrayInTwoArray.cpp)
add_executable(NumberOfPairs cmake-build-debug/NumberOfPairs.cpp)
add_executable(prove01 lab01.c)
add_executable(practice_CA practice_CA.c)
add_executable(lab02 lab02.c)
add_executable(lab01 lab01.c)
add_executable(practice practice.cpp)